// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Function] configureStore Should render configureClientStore 1`] = `
{
  "alertList": {},
  "auth": {
    "address": null,
    "birthday": null,
    "email": null,
    "familyName": null,
    "givenName": null,
    "gpNumber": null,
    "hasSubscriptions": false,
    "initialAuthRequest": false,
    "isAuthenticated": false,
    "mobileNumber": null,
    "subscriptions": null,
    "username": null,
  },
  "booking": {},
  "bookmarkList": {},
  "chatbot": {
    "isAiaibotInitialized": false,
  },
  "comment": {
    "count": 0,
  },
  "header": {
    "articleData": {},
    "contentType": "",
    "isSinglePage": false,
    "noHeader": false,
    "title": "",
  },
  "navigation": {
    "activePublication": null,
    "tree": null,
    "visibleNavigation": null,
  },
  "piano": {
    "browserMetadata": {
      "browserMode": "normal",
      "isPushNotificationsEnabled": false,
      "isPushNotificationsSupported": false,
      "notificationsPermission": "default",
    },
    "isAccessGranted": false,
    "pageMetadata": {
      "channelsHierarchy": [],
      "contentType": "LandingPage",
      "gcid": "",
      "isNativeContent": false,
      "isPrintArticle": false,
      "mainChannel": "",
      "notInitialized": false,
      "page": null,
      "pathname": "/home",
      "publication": "beobachter",
      "publicationDate": "2016-11-24T08:03:38.000Z",
      "restrictionStatus": null,
      "section": "HOME",
      "subType": "",
      "tags": [],
      "webinarId": null,
    },
    "userMetadata": {
      "externalSubscription": "",
      "idToken": "",
      "initialAuthRequest": false,
    },
    "webinarAccessGranted": false,
  },
  "route": {
    "isCrawler": false,
    "isInitialPage": true,
    "loading": false,
    "locationBeforeTransitions": {
      "action": "PUSH",
      "hash": "",
      "key": null,
      "pathname": "/",
      "query": {},
      "search": "",
    },
    "screenReady": true,
    "vertical": "vertical/home",
  },
  "scroll": {
    "direction": "",
    "scrollTop": 0,
  },
  "window": {
    "height": 768,
    "imageBreakpoint": {
      "from": 960,
      "label": "960",
      "to": 1679,
    },
    "viewport": {
      "from": 0,
      "label": "viewport/xs",
      "to": NaN,
    },
    "width": 1024,
  },
}
`;

exports[`[Function] configureStore Should render configureServerStore 1`] = `
{
  "alertList": {},
  "auth": {
    "address": null,
    "birthday": null,
    "deviceId": "",
    "email": null,
    "familyName": null,
    "givenName": null,
    "gpNumber": null,
    "hasLegalAdviceAccess": false,
    "hasSubscriptions": false,
    "initialAuthRequest": false,
    "isAbotAllowed": false,
    "isAuthenticated": false,
    "isChatbotAllowed": false,
    "legalAdviceSubscriptions": null,
    "mobileNumber": null,
    "realtime": null,
    "registrationTimestamp": null,
    "subscriptionTimestamp": null,
    "subscriptions": null,
    "subscriptionsEndDates": null,
    "username": null,
  },
  "booking": {},
  "bookmarkList": {},
  "chatbot": {
    "isAiaibotInitialized": false,
  },
  "comment": {
    "count": 0,
  },
  "header": {
    "articleData": {},
    "contentType": "",
    "isSinglePage": false,
    "noHeader": false,
    "title": "",
  },
  "navigation": {
    "activePublication": null,
    "activeVerticalMenu": null,
    "tree": null,
    "visibleNavigation": null,
  },
  "piano": {
    "browserMetadata": {
      "browserMode": "normal",
      "isPushNotificationsEnabled": false,
      "isPushNotificationsSupported": false,
      "notificationsPermission": "default",
    },
    "isAccessGranted": false,
    "isChatbotHidden": false,
    "pageMetadata": {
      "channelsHierarchy": [],
      "cliffhangerBulletpoints": [],
      "cliffhangerTitle": null,
      "contentType": null,
      "gcid": null,
      "isNativeContent": false,
      "isPrintArticle": false,
      "mainChannel": null,
      "notInitialized": false,
      "page": null,
      "pathname": "/arbeit",
      "publication": "BEO",
      "publicationDate": "",
      "restrictionStatus": null,
      "section": "",
      "subType": "",
      "tags": null,
      "webinarId": null,
    },
    "userMetadata": {
      "externalSubscription": [],
      "idToken": "",
      "initialAuthRequest": false,
      "subscriptions": [],
    },
    "webinarAccessGranted": false,
  },
  "route": {
    "hasCustomTracking": false,
    "isCrawler": false,
    "isHybridApp": false,
    "isInitialPage": true,
    "loading": true,
    "locationBeforeTransitions": {
      "action": "PUSH",
      "hash": "",
      "key": null,
      "pathname": "/arbeit",
      "query": {},
      "search": "",
    },
    "screenReady": true,
    "vertical": "vertical/work",
  },
  "scroll": {
    "direction": "",
    "scrollTop": 0,
  },
  "window": {
    "height": 768,
    "imageBreakpoint": {
      "from": 960,
      "label": "960",
      "to": 1679,
    },
    "viewport": {
      "from": 0,
      "label": "viewport/xs",
      "to": null,
    },
    "width": 1024,
  },
}
`;

exports[`[Function] configureStore Should render configureServerStore with vertical home 1`] = `
{
  "alertList": {},
  "auth": {
    "address": null,
    "birthday": null,
    "deviceId": "",
    "email": null,
    "familyName": null,
    "givenName": null,
    "gpNumber": null,
    "hasLegalAdviceAccess": false,
    "hasSubscriptions": false,
    "initialAuthRequest": false,
    "isAbotAllowed": false,
    "isAuthenticated": false,
    "isChatbotAllowed": false,
    "legalAdviceSubscriptions": null,
    "mobileNumber": null,
    "realtime": null,
    "registrationTimestamp": null,
    "subscriptionTimestamp": null,
    "subscriptions": null,
    "subscriptionsEndDates": null,
    "username": null,
  },
  "booking": {},
  "bookmarkList": {},
  "chatbot": {
    "isAiaibotInitialized": false,
  },
  "comment": {
    "count": 0,
  },
  "header": {
    "articleData": {},
    "contentType": "",
    "isSinglePage": false,
    "noHeader": false,
    "title": "",
  },
  "navigation": {
    "activePublication": null,
    "activeVerticalMenu": null,
    "tree": null,
    "visibleNavigation": null,
  },
  "piano": {
    "browserMetadata": {
      "browserMode": "normal",
      "isPushNotificationsEnabled": false,
      "isPushNotificationsSupported": false,
      "notificationsPermission": "default",
    },
    "isAccessGranted": false,
    "isChatbotHidden": false,
    "pageMetadata": {
      "channelsHierarchy": [],
      "cliffhangerBulletpoints": [],
      "cliffhangerTitle": null,
      "contentType": null,
      "gcid": null,
      "isNativeContent": false,
      "isPrintArticle": false,
      "mainChannel": null,
      "notInitialized": false,
      "page": null,
      "pathname": "/",
      "publication": "BEO",
      "publicationDate": "",
      "restrictionStatus": null,
      "section": "",
      "subType": "",
      "tags": null,
      "webinarId": null,
    },
    "userMetadata": {
      "externalSubscription": [],
      "idToken": "",
      "initialAuthRequest": false,
      "subscriptions": [],
    },
    "webinarAccessGranted": false,
  },
  "route": {
    "hasCustomTracking": false,
    "isCrawler": false,
    "isHybridApp": false,
    "isInitialPage": true,
    "loading": true,
    "locationBeforeTransitions": {
      "action": "PUSH",
      "hash": "",
      "key": null,
      "pathname": "/",
      "query": {},
      "search": "",
    },
    "screenReady": true,
    "vertical": "vertical/home",
  },
  "scroll": {
    "direction": "",
    "scrollTop": 0,
  },
  "window": {
    "height": 768,
    "imageBreakpoint": {
      "from": 960,
      "label": "960",
      "to": 1679,
    },
    "viewport": {
      "from": 0,
      "label": "viewport/xs",
      "to": null,
    },
    "width": 1024,
  },
}
`;
